--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -48,6 +49,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "js-beautify": "^1.13.5",
+    "json-to-ts": "^1.7.0",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
     "mini-css-extract-plugin": "0.11.3",
@@ -164,6 +166,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/js-beautify": "^1.13.1"
   }
 }
